[package]
name = "obs-wrapper"
version = "0.4.1"
authors = ["Bennett Hardwick <me@bennetthardwick.com>", "Awpteamoose <awpteamoose@gmail.com>"]
edition = "2018"
license = "GPL-2.0"
description = "Safe wrapper of obs-sys"
repository = "https://github.com/bennetthardwick/rust-obs-plugins"

[workspace]

members = [
  "obs-sys",
  "plugins/*",
]

[dependencies]
obs-sys = { path = "./obs-sys", version = "0.3" }
paste = "1"
log = { version = "0.4", features = ["std"] }
num-traits = "0.2"
thiserror = "2"
