[package]
name = "obs-sys"
version = "0.3.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>", "Awpteamoose <awpteamoose@gmail.com>"]
edition = "2018"
links = "obs"
description = "Bindgen of <obs/obs.h>"
license = "GPL-2.0"
repository = "https://github.com/bennetthardwick/rust-obs-plugins"

[build-dependencies]
bindgen = { version = "0.69", features = ["experimental"] }

[target.'cfg(windows)'.build-dependencies]
cc = "1.0"
regex = "1"
winreg = "0.52"

[target.'cfg(target_os = "macos")'.build-dependencies]
shellexpand = "2.0"
