[package]
name = "obs-sys"
version = "0.3.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>", "Awpteamoose <awpteamoose@gmail.com>"]
edition = "2018"
links = "obs"
description = "Bindgen of <obs/obs.h>"
license = "GPL-2.0"
repository = "https://github.com/bennetthardwick/rust-obs-plugins"

[build-dependencies]
bindgen = { version = "0.71", features = ["experimental"] }

[target.'cfg(windows)'.build-dependencies]
cc = "1"
regex = "1"
winreg = "0.55"
